add quiz attempt api and fix bugs
